[gd_scene load_steps=5 format=3 uid="uid://b3k3osjd101qr"]

[ext_resource type="Script" uid="uid://dibdp8wiu6c2y" path="res://scenes/main_menu/main_menu.gd" id="1_fsom3"]
[ext_resource type="Script" uid="uid://b0masuh4p8fo7" path="res://scenes/main_menu/room_create_panel.gd" id="2_0ebjn"]
[ext_resource type="Script" uid="uid://bu2cfr5p7qkhx" path="res://scenes/main_menu/lobbies_panel.gd" id="4_wem23"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fsom3"]
bg_color = Color(0.197937, 0.197937, 0.197937, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fsom3")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 315.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonsMargin" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 515
theme_override_constants/margin_right = 1540

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ButtonsMargin"]
layout_mode = 2

[node name="JoinBtn" type="Button" parent="Panel/ButtonsMargin/VBoxContainer"]
custom_minimum_size = Vector2(0, 44.785)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 49
text = "Join Room"
flat = true
alignment = 0

[node name="CreatBtn" type="Button" parent="Panel/ButtonsMargin/VBoxContainer"]
custom_minimum_size = Vector2(0, 44.785)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 49
text = "Create Room"
flat = true
alignment = 0

[node name="Control" type="Control" parent="Panel/ButtonsMargin/VBoxContainer"]
custom_minimum_size = Vector2(0, 31.775)
layout_mode = 2

[node name="QuitBtn" type="Button" parent="Panel/ButtonsMargin/VBoxContainer"]
custom_minimum_size = Vector2(0, 44.785)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 46
text = "Quit"
flat = true
alignment = 0

[node name="RoomCreatePanel" type="CenterContainer" parent="Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2
script = ExtResource("2_0ebjn")

[node name="RoomCreateBG" type="PanelContainer" parent="Panel/RoomCreatePanel"]
custom_minimum_size = Vector2(900, 500)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/RoomCreatePanel/RoomCreateBG"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/RoomCreatePanel/RoomCreateBG/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="Panel/RoomCreatePanel/RoomCreateBG/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(800, 5.785)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 51
theme_override_styles/normal = SubResource("StyleBoxFlat_fsom3")
text = "Create Room"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Panel/RoomCreatePanel/RoomCreateBG/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40.56)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/RoomCreatePanel/RoomCreateBG/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HostNameLine" type="LineEdit" parent="Panel/RoomCreatePanel/RoomCreateBG/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 26
placeholder_text = "Your Name"
alignment = 1
max_length = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/RoomCreatePanel/RoomCreateBG/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RoomNameLine" type="LineEdit" parent="Panel/RoomCreatePanel/RoomCreateBG/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 26
placeholder_text = "Room Name"
alignment = 1
max_length = 20

[node name="CreateRoomConsole" type="RichTextLabel" parent="Panel/RoomCreatePanel/RoomCreateBG/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40.56)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreateRoomBtn" type="Button" parent="Panel/RoomCreatePanel/RoomCreateBG/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 49)
layout_mode = 2
theme_override_font_sizes/font_size = 59
text = "Create "

[node name="QuitBtn" type="Button" parent="Panel/RoomCreatePanel/RoomCreateBG"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
text = "X"

[node name="LobbiesPanel" type="CenterContainer" parent="Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2
script = ExtResource("4_wem23")

[node name="RoomCreateBG" type="PanelContainer" parent="Panel/LobbiesPanel"]
custom_minimum_size = Vector2(900, 500)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/LobbiesPanel/RoomCreateBG"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/LobbiesPanel/RoomCreateBG/VBoxContainer"]
custom_minimum_size = Vector2(800, 5.785)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 51
theme_override_styles/normal = SubResource("StyleBoxFlat_fsom3")
text = "Lobbies"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PeerNameLine" type="LineEdit" parent="Panel/LobbiesPanel/RoomCreateBG/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 26
placeholder_text = "Your Name"
alignment = 1
max_length = 20

[node name="JoinRoomConsole" type="RichTextLabel" parent="Panel/LobbiesPanel/RoomCreateBG/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40.56)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/LobbiesPanel/RoomCreateBG/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/LobbiesPanel/RoomCreateBG/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Lobbies" type="VBoxContainer" parent="Panel/LobbiesPanel/RoomCreateBG/VBoxContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 17

[node name="RefreshBtn" type="Button" parent="Panel/LobbiesPanel/RoomCreateBG/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Refresh"

[node name="QuitBtn" type="Button" parent="Panel/LobbiesPanel/RoomCreateBG"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
text = "X"

[connection signal="pressed" from="Panel/ButtonsMargin/VBoxContainer/JoinBtn" to="." method="_on_join_btn_pressed"]
[connection signal="pressed" from="Panel/ButtonsMargin/VBoxContainer/CreatBtn" to="." method="_on_creat_btn_pressed"]
[connection signal="pressed" from="Panel/ButtonsMargin/VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="pressed" from="Panel/RoomCreatePanel/RoomCreateBG/MarginContainer/VBoxContainer/CreateRoomBtn" to="Panel/RoomCreatePanel" method="_on_create_room_btn_pressed"]
[connection signal="pressed" from="Panel/RoomCreatePanel/RoomCreateBG/QuitBtn" to="Panel/RoomCreatePanel" method="_on_quit_btn_pressed"]
[connection signal="pressed" from="Panel/LobbiesPanel/RoomCreateBG/VBoxContainer/RefreshBtn" to="Panel/LobbiesPanel" method="_on_refresh_btn_pressed"]
[connection signal="pressed" from="Panel/LobbiesPanel/RoomCreateBG/QuitBtn" to="Panel/LobbiesPanel" method="_on_quit_btn_pressed"]
